<resources>
    <string name="app_name">BLE_PI</string>
    <string name="derivative_gain">Derivative Gain</string>
    <string name="throttle_pwm">Throttle PWM(%)</string>
    <string name="integral_ki">Integral (Ki)</string>
    <string name="proportional_kp">Proportional (Kp)</string>
    <string name="throttle_float_10_0_20_0">Throttle Float: 10.0-20.0</string>
    <string name="float_string">Float</string>
    <string name="start_stop">Start/Stop</string>
    <string name="ble_advertise">BLE Advertise</string>
</resources>
